@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-22T16:07:32Z",
+  "timestamp" : "2024-01-24T00:30:39Z",
   "count_outdated" : 223,
   "uniques_outdated" : 158,
-  "count" : 228,
-  "uniques" : 163,
+  "count" : 229,
+  "uniques" : 164,
   "clones" : [
     {
       "timestamp": "2024-01-11T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-01-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
