@@ -1,3 +1,12 @@
+2024-01-24T00:30:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7633654270 # 51
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
+* notice: last 14d: unq all: 5 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 158 223 / 163 228
+* notice: next accum: outdated-unq outdated-all / unq all: 158 223 / 164 229
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-23]
+
 2024-01-22T16:07:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7613994648 # 47
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
